# server

./: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: lint_check.yml
apps/: urls.py
apps/arts/: __init__.py  admin.py  apps.py  models.py  serializers.py  swaggers.py  urls.py  utils.py  views.py
apps/arts/migrations/: 0001_initial.py  0002_alter_art_category.py  0002_ticket_alter_art_options_alter_artschedule_options_and_more.py  0002_ticket_qr_code.py  0003_alter_art_status.py  0003_art_place_artschedule_art_ticket_art.py  0003_ticket_is_sold_out.py  0004_alter_art_image.py  0004_alter_artschedule_art.py  0004_alter_ticket_qr_code.py  0005_alter_ticket_art_schedule.py  0005_artschedule_unique_schedule_start_at_and_more.py  0006_comment.py  0007_art_seat_max_count.py  0008_remove_artschedule_seat_count.py  0009_comment_score.py  0010_alter_art_cs_phone_number.py  0011_art_hit_count.py  0012_alter_ticket_art_schedule.py  0013_ticket_user.py
apps/core/: models.py  swaggers.py  utils.py  views.py
apps/places/: admin.py  models.py  serializers.py  urls.py  views.py
apps/places/migrations/: 0001_initial.py  0002_place_is_reserved_seat.py
apps/users/: jwt.py  managers.py  models.py  serializers.py  swaggers.py  urls.py  utils.py  views.py
apps/users/migrations/: 0001_initial.py  0002_user_is_deleted.py  0003_user_profile_image.py  (+3 more)
config/: authentications.py  middleware.py  settings.py  urls.py  utils.py  wsgi.py
config/settings/: __init__.py  deploy.py  develop.py  local.py
nginx/: server.conf
(+2 files in other folders)
